--- a/templates/dummy.html
+++ b/templates/dummy.html
@@ -19,6 +19,13 @@
             <a href="{% url 'admin:index' %}" class="nav-link">Admin page</a>
             <a href="{% url 'home' %}" class="nav-link">Home page</a>
             <a href="{% url 'registration' %}" class="nav-link">registration page</a>
+            {% if user.is_authenticated %}
+              <a href="{% url 'user_logout' %}" class="nav_link">user_logout</a>
+            {% else %}
+              <a href="{% url 'user_login' %}" class="nav-link">user_login</a>
+            {% endif %}
+
+        
         
             
 
@@ -44,5 +51,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
     -->
+    </center>
   </body>
 </html>
